Fix handle animation alignment

--- a/style.css
+++ b/style.css
@@ -113,15 +113,12 @@
   left: 76%;
   z-index: 15;
   pointer-events: none;
-}
-
-#handle {
   transform: translate(6.3%, -14.54%) scale(4) rotateX(0deg);
   transition: transform 0.25s ease;
   transform-origin: top center;
 }
 
-#handle.pulled {
+.handle.pulled {
   transform: translate(6.3%, -14.54%) scale(4) rotateX(40deg);
 }
 
